# cmd/thv-operator/api/v1beta1/zz_generated.deepcopy.go
@@ -280,6 +280,13 @@ func (in *EmbeddedAuthServerConfig) DeepCopyInto(out *EmbeddedAuthServerConfig) 
 		*out = new(EmbeddedAuthServerCIMDConfig)
 		**out = **in
 	}
+	if in.TrustedIssuers != nil {
+		in, out := &in.TrustedIssuers, &out.TrustedIssuers
+		*out = make([]TrustedIssuerConfig, len(*in))
+		for i := range *in {
+			(*in)[i].DeepCopyInto(&(*out)[i])
+		}
+	}
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new EmbeddedAuthServerConfig.
@@ -2928,6 +2935,26 @@ func (in *ToolOverride) DeepCopy() *ToolOverride {
 		return nil
 	}
 	out := new(ToolOverride)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *TrustedIssuerConfig) DeepCopyInto(out *TrustedIssuerConfig) {
+	*out = *in
+	if in.AllowedActors != nil {
+		in, out := &in.AllowedActors, &out.AllowedActors
+		*out = make([]string, len(*in))
+		copy(*out, *in)
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new TrustedIssuerConfig.
+func (in *TrustedIssuerConfig) DeepCopy() *TrustedIssuerConfig {
+	if in == nil {
+		return nil
+	}
+	out := new(TrustedIssuerConfig)
 	in.DeepCopyInto(out)
 	return out
 }
